--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,5 @@
 
+<%= link_to 'Back', articles_path %>
 <p>
 <strong>Title:</strong>
 <%= @article.title %>
@@ -8,3 +9,4 @@
 <strong>Text:</strong>
 <%= @article.text %>
 </p>
+
