--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,3 @@
-
-<%= link_to 'Back', articles_path %>
 <p>
 <strong>Title:</strong>
 <%= @article.title %>
@@ -10,3 +8,5 @@
 <%= @article.text %>
 </p>
 
+<%= link_to 'Edit', edit_article_path(@article) %> |
+<%= link_to 'Back', articles_path %>
